--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.1
+            context: ./.docker/app
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
