--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.13",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
@@ -44,6 +45,15 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "pint:test": [
+            "./vendor/bin/pint --test"
+        ],
+        "pint:dirty": [
+            "./vendor/bin/pint --dirty"
+        ],
+        "pint:fix": [
+            "./vendor/bin/pint --fix"
         ]
     },
     "extra": {
