1st Run of Pint for PSR12

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
             "./vendor/bin/pint --dirty"
         ],
         "pint:fix": [
-            "./vendor/bin/pint --fix"
+            "./vendor/bin/pint"
         ]
     },
     "extra": {
