--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "kirschbaum-development/laravel-openapi-validator": "^0.3.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
