--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devDependencies": {
         "@babel/preset-react": "^7.16.7",
         "autoprefixer": "^10.4.4",
-        "axios": "^0.25.0",
+        "eslint": "^8.54.0",
+        "eslint-config-airbnb": "^19.0.4",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.12",
@@ -22,6 +23,7 @@
         "@headlessui/react": "^1.5.0",
         "@heroicons/react": "^1.0.6",
         "prop-types": "^15.8.1",
+        "axios": "^0.25.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0"
